# impulse-analyzer

./: .gitignore  config.json  funciones.py  gui.py  main.py  pyproject.toml  readme.md  requirements.txt
old_scripts/: ImpulseAnalyzr.py
src/: gui.py
src/utils/: audio_utils.py  calculate_parameters.py  plots.py  plots_utils.py  signal_processing.py
