[project]
name = "impulse-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "almarazj",email = "juan.almaraz097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "acoustics (>=0.2.6,<0.3.0)",
    "everything-tkinter (>=0.2,<0.3)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pillow",
    "scipy (>=1.15.2,<2.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pyqt5"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
